--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,11 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
+        "libern/qr-code-reader": "^1.0",
         "simplesoftwareio/simple-qrcode": "^2.0"
     },
     "require-dev": {
